--- a/apps/Manager/views/index.phtml
+++ b/apps/Manager/views/index.phtml
@@ -10,7 +10,7 @@
     <meta name="keywords" content=""/>
     <meta name="robots" content="index, follow">
 
-    <title> CRM </title>
+    <title> Rhino - Project Manager </title>
 
     <link rel="shortcut icon" href="/favicon.ico">
 
@@ -73,8 +73,8 @@
 
           <li class="has-submenu <?php echo ($this->router->getControllerName() === 'projects' ? 'active' : ''); ?> "><a href="#"><i class="fa fa-archive"></i> <span class="nav-label">Projetos</span></a>
             <ul class="list-unstyled">
-              <li class="<?php echo ($this->router->getControllerName() === 'projects' && $this->router->getActionName() === 'index' ? 'active' : ''); ?>" ><a href="/clients/">Gerenciamento</a></li>
-              <li class="<?php echo ($this->router->getControllerName() === 'projects' && $this->router->getActionName() === 'create' ? 'active' : ''); ?>" ><a href="/clients/create">Cadastramento</a></li>
+              <li class="<?php echo ($this->router->getControllerName() === 'projects' && $this->router->getActionName() === 'index' ? 'active' : ''); ?>" ><a href="/projects/">Gerenciamento</a></li>
+              <li class="<?php echo ($this->router->getControllerName() === 'projects' && $this->router->getActionName() === 'create' ? 'active' : ''); ?>" ><a href="/projects/create">Cadastramento</a></li>
             </ul>
           </li>
 
