--- a/apps/Manager/views/login/index.phtml
+++ b/apps/Manager/views/login/index.phtml
@@ -1,9 +1,8 @@
 <div class="container login">
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-4">
-
-      <h3 class="text-center">CRM</h3>
-        <p class="text-center">Acesse Painel de Gerenciamento</p>
+    <div class="col-lg-4 col-lg-offset-4 text-center">
+      <img src="/assets/manager/images/logo.png" alt="Rhino - Project Manager" class="img-responsive logo" />
+      <h3 class="text-center"> Rhino - Project Manager </h3>
         <hr class="clean">
 
         <div class="alert alert-dismissible hidden" role="alert">
