--- a/public/assets/manager/css/app/custom.css
+++ b/public/assets/manager/css/app/custom.css
@@ -45,3 +45,10 @@
   height: 200px;
   display: inline-block;
 }
+
+.flex-center
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
