--- a/apps/Manager/views/index.phtml
+++ b/apps/Manager/views/index.phtml
@@ -107,9 +107,11 @@
     </section>
 
     <footer class="container-fluid footer">
-      Copyright &copy; 2014
-      <a href="http://freakpixels.com/" target="_blank">FreakPixels</a>
-      <a href="#" class="pull-right scrollToTop"><i class="fa fa-chevron-up"></i></a>
+      <div class="container">
+        Copyright &copy; 2016
+        <a href="#" target="_blank">Rhino - Project Manager</a>
+        <a href="#" class="pull-right scrollToTop"><i class="fa fa-chevron-up"></i></a>
+      </div>
     </footer>
 
     <?php else:?>
