--- a/apps/Manager/views/projects/modify.phtml
+++ b/apps/Manager/views/projects/modify.phtml
@@ -1,7 +1,7 @@
 <div class="warper container-fluid">
 
     <div class="page-header">
-      <h1>Alterações e Informações do Projeto</h1>
+      <h1><?php echo $project->title; ?></h1>
     </div>
 
     <div class="row">
@@ -14,14 +14,61 @@
       </div>
     </div>
 
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="active">
+        <a href="#overview" role="tab" data-toggle="tab">Visão Geral</a>
+      </li>
+      <li>
+        <a href="#tasks" role="tab" data-toggle="tab">Tarefas</a>
+      </li>
+      <li>
+        <a href="#settings" role="tab" data-toggle="tab">Configurações</a>
+      </li>
+    </ul>
+
     <div class="tab-content">
 
-      <div class="panel panel-default">
+      <div class="panel panel-default tab-pane tabs-up active" id="overview">
+        <div class="panel-body">
+
+          <div class="row">
+            <div class="col-md-3">
+            	<div class="panel panel-info">
+                  <div class="panel-body">
+                    <strong>Criado:</strong> <?php echo (new \DateTime($project->created))->format("d-m-Y"); ?>
+                    <hr>
+                    <strong>Deadline:</strong> <?php echo (new \DateTime($project->deadline))->format("d-m-Y"); ?>
+                    <hr>
+                    <strong>Concluído:</strong> <?php echo ($project->finished != null ? (new \DateTime($project->finished))->format("d-m-Y") : "n/a"); ?>
+                    <hr>
+                    <strong>Cliente:</strong> <?php echo "{$project->firstname} {$project->lastname}".($project->fantasy ? " ( {$project->fantasy} ) " : ""); ?>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-md-5"></div>
+
+            <div class="col-md-4">
+              <div data-chart="/projects/chart/<?php echo $project->_; ?>" style="height:250px;"></div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="panel panel-default tab-pane tabs-up" id="tasks">
         <div class="panel-body">
 
 
         </div>
       </div>
 
-  </div>
+      <div class="panel panel-default tab-pane tabs-up" id="settings">
+        <div class="panel-body">
+
+
+        </div>
+      </div>
+
+    </div>
 </div>
