--- a/public/assets/manager/css/app/app.v1.css
+++ b/public/assets/manager/css/app/app.v1.css
@@ -1026,6 +1026,11 @@ Footer
 	color:#79B9D9;}
 
 
+.bg-default{
+	background-color:#2B2F3E;}
+.text-default{
+	color:#2B2F3E;}
+
 .bg-warning{
 	background-color:#FEB252;}
 .text-warning{
