--- a/apps/Manager/views/projects/modify.phtml
+++ b/apps/Manager/views/projects/modify.phtml
@@ -14,7 +14,7 @@
       </div>
     </div>
 
-    <ul class="nav nav-tabs" role="tablist">
+    <ul class="nav nav-tabs transparent" role="tablist">
       <li class="active">
         <a href="#overview" role="tab" data-toggle="tab">Visão Geral</a>
       </li>
@@ -28,47 +28,96 @@
 
     <div class="tab-content">
 
-      <div class="panel panel-default tab-pane tabs-up active" id="overview">
+      <div class="tab-pane active" id="overview">
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-md-3">
-            	<div class="panel panel-info">
-                  <div class="panel-body">
-                    <strong>Criado:</strong> <?php echo (new \DateTime($project->created))->format("d-m-Y"); ?>
-                    <hr>
-                    <strong>Deadline:</strong> <?php echo (new \DateTime($project->deadline))->format("d-m-Y"); ?>
-                    <hr>
-                    <strong>Concluído:</strong> <?php echo ($project->finished != null ? (new \DateTime($project->finished))->format("d-m-Y") : "n/a"); ?>
-                    <hr>
-                    <strong>Cliente:</strong> <?php echo "{$project->firstname} {$project->lastname}".($project->fantasy ? " ( {$project->fantasy} ) " : ""); ?>
+            <div class="col-lg-6 col-md-12">
+              <div class="row">
+
+                <div class="col-lg-6 col-md-6">
+                	<div class="panel panel-info">
+                      <div class="panel-body">
+                        <strong>Criado:</strong> <?php echo (new \DateTime($project->created))->format("d-m-Y"); ?>
+                        <hr>
+                        <strong>Deadline:</strong> <?php echo (new \DateTime($project->deadline))->format("d-m-Y"); ?>
+                        <hr>
+                        <strong>Concluído:</strong> <?php echo ($project->finished != null ? (new \DateTime($project->finished))->format("d-m-Y") : "n/a"); ?>
+                        <hr>
+                        <strong>Cliente:</strong> <?php echo "{$project->firstname} {$project->lastname}".($project->fantasy ? " ( {$project->fantasy} ) " : ""); ?>
+                      </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6">
+                  <div data-chart="/projects/chart/<?php echo $project->_; ?>" style="height:250px;"></div>
+                </div>
+
+                <div class="col-lg-12 col-md-12">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">Descrição</div>
+                    <div class="panel-body">
+                      <?php echo $project->description; ?>
+                    </div>
                   </div>
                 </div>
+
+              </div>
             </div>
-
-            <div class="col-md-5"></div>
-
-            <div class="col-md-4">
-              <div data-chart="/projects/chart/<?php echo $project->_; ?>" style="height:250px;"></div>
+            <div class="col-lg-6 col-md-12">
+                <ul class="timeline list-unstyled">
+                  <li class="clearfix">
+                      <time class="tl-time">
+                          <h3 class="text-red">23:15</h3>
+                            <p>05th September 2013</p>
+                        </time>
+                        <i class="fa fa-trash bg-red tl-icon text-white"></i>
+                        <div class="tl-content">
+                          <div class="panel panel-danger">
+                                <div class="panel-heading">Events</div>
+                                <div class="panel-body">
+                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet tellus ut tincidunt euismod. Nam fermentum, massa sit amet pulvinar laoreet, sem mi viverra turpis, ac porta felis nisl eu odio.
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                  <li class="clearfix">
+                      <time class="tl-time">
+                          <h3 class="text-success">23:15</h3>
+                            <p>05th September 2013</p>
+                        </time>
+                        <i class="fa fa-check bg-success tl-icon text-white"></i>
+                        <div class="tl-content">
+                          <div class="panel panel-success">
+                                <div class="panel-heading">Events</div>
+                                <div class="panel-body">
+                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet tellus ut tincidunt euismod. Nam fermentum, massa sit amet pulvinar laoreet, sem mi viverra turpis, ac porta felis nisl eu odio.
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                  <li class="clearfix">
+                      <time class="tl-time">
+                          <h3 class="text-info">23:15</h3>
+                            <p>05th September 2013</p>
+                        </time>
+                        <i class="fa fa-info-circle bg-info tl-icon text-white"></i>
+                        <div class="tl-content">
+                          <div class="panel panel-info">
+                                <div class="panel-heading">Events</div>
+                                <div class="panel-body">
+                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet tellus ut tincidunt euismod. Nam fermentum, massa sit amet pulvinar laoreet, sem mi viverra turpis, ac porta felis nisl eu odio.
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
           </div>
 
         </div>
       </div>
 
-      <div class="panel panel-default tab-pane tabs-up" id="tasks">
-        <div class="panel-body">
-
-
-        </div>
-      </div>
-
-      <div class="panel panel-default tab-pane tabs-up" id="settings">
-        <div class="panel-body">
-
-
-        </div>
-      </div>
 
     </div>
 </div>
