Project Overview , add/remove project members

--- a/apps/Manager/views/projects/index.phtml
+++ b/apps/Manager/views/projects/index.phtml
@@ -29,7 +29,7 @@
     <table class="table table-striped no-margn">
         <thead>
           <tr>
-            <th>Projeto</th>
+            <th width="25%">Projeto</th>
             <th>Categoria</th>
             <th>Cliente</th>
             <th>Deadline</th>
