--- a/public/assets/manager/css/app/custom.css
+++ b/public/assets/manager/css/app/custom.css
@@ -62,3 +62,10 @@
 {
   background-color: transparent;
 }
+
+.space-between
+{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
