--- a/apps/Manager/views/index.phtml
+++ b/apps/Manager/views/index.phtml
@@ -86,6 +86,9 @@
             </ul>
           </li>
 
+          <li class="<?php echo ($this->router->getControllerName() === 'settings' ? 'active' : ''); ?>">
+            <a href="/"><i class="fa fa-wrench"></i><span class="nav-label">Configurações</span></a>
+          </li>
 
         </ul>
       </nav>
